[gd_scene load_steps=25 format=3 uid="uid://ddjdvmj3ommdu"]

[ext_resource type="Script" path="res://npc.gd" id="1_f8a8o"]
[ext_resource type="PackedScene" uid="uid://ddly54cbm84af" path="res://projectile.tscn" id="2_rifn1"]
[ext_resource type="Script" path="res://npc_belief_visualizer.gd" id="4_ggpmd"]
[ext_resource type="Texture2D" uid="uid://dlfvckp1xub78" path="res://walk-1.png" id="5_1qpc0"]
[ext_resource type="Shader" path="res://sphere.gdshader" id="5_2lq31"]
[ext_resource type="Texture2D" uid="uid://biw2pe7mtptdj" path="res://walk-2.png" id="6_3r1ct"]
[ext_resource type="Texture2D" uid="uid://ba3wxfij1bv6p" path="res://head-back.png" id="7_n08ip"]
[ext_resource type="Texture2D" uid="uid://cywgpxoqroo1y" path="res://head-front.png" id="8_y7txn"]
[ext_resource type="Texture2D" uid="uid://d4l8cmg46qquc" path="res://eyes.png" id="9_b2x7f"]
[ext_resource type="Texture2D" uid="uid://c38c532l01bxn" path="res://head-outline.png" id="9_occuo"]
[ext_resource type="Texture2D" uid="uid://bjathuci5lsn1" path="res://shadow.png" id="10_ohbyq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tlt4c"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("5_1qpc0")
}, {
"duration": 3.0,
"texture": ExtResource("6_3r1ct")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a78gt"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.448

[sub_resource type="CanvasTexture" id="CanvasTexture_mpo78"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_plwf0"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.496

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ua1df"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kkuth"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v5uvs"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4mr5x"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1jdf0"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mww58"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6aumn"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uxioa"]
shader = ExtResource("5_2lq31")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/padding = 0.2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2teft"]
radius = 12.0
height = 36.5

[node name="NPC" type="CharacterBody2D" groups=["npc"]]
collision_layer = 6
script = ExtResource("1_f8a8o")
colors = Array[Color]([Color(1, 0.207843, 0.207843, 1), Color(0, 0.827451, 0.278431, 1), Color(0, 0.666667, 1, 1), Color(0.690196, 0.113725, 0.854902, 1), Color(1, 0.788235, 0, 1)])
border_colors = Array[Color]([Color(0.705882, 0, 0, 1), Color(0.0980392, 0.592157, 0.45098, 1), Color(0, 0.356863, 0.843137, 1), Color(0.427451, 0.00784314, 0.611765, 1), Color(0.898039, 0.435294, 0, 1)])
projectile_scene = ExtResource("2_rifn1")

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 3)
scale = Vector2(0.08, 0.08)
texture = ExtResource("10_ohbyq")
offset = Vector2(0, 250)

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 16.736)
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_tlt4c")

[node name="Head-back" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.08)
texture = ExtResource("7_n08ip")

[node name="BeliefVisualizer" type="Node2D" parent="."]
rotation = 2.61799
script = ExtResource("4_ggpmd")
border_thickness = 0.2
offset = 16.0
max_size = 30.0
dead_angle = 2.094

[node name="Belief1" type="Node2D" parent="BeliefVisualizer"]

[node name="Core" type="Sprite2D" parent="BeliefVisualizer/Belief1"]
material = SubResource("ShaderMaterial_a78gt")
texture = SubResource("CanvasTexture_mpo78")

[node name="Outline" type="Sprite2D" parent="BeliefVisualizer/Belief1"]
z_index = -1
material = SubResource("ShaderMaterial_plwf0")
texture = SubResource("CanvasTexture_mpo78")

[node name="Belief2" type="Node2D" parent="BeliefVisualizer"]

[node name="Core" type="Sprite2D" parent="BeliefVisualizer/Belief2"]
material = SubResource("ShaderMaterial_ua1df")
texture = SubResource("CanvasTexture_mpo78")

[node name="Outline" type="Sprite2D" parent="BeliefVisualizer/Belief2"]
z_index = -1
material = SubResource("ShaderMaterial_kkuth")
texture = SubResource("CanvasTexture_mpo78")

[node name="Belief3" type="Node2D" parent="BeliefVisualizer"]

[node name="Core" type="Sprite2D" parent="BeliefVisualizer/Belief3"]
material = SubResource("ShaderMaterial_v5uvs")
texture = SubResource("CanvasTexture_mpo78")

[node name="Outline" type="Sprite2D" parent="BeliefVisualizer/Belief3"]
z_index = -1
material = SubResource("ShaderMaterial_4mr5x")
texture = SubResource("CanvasTexture_mpo78")

[node name="Belief4" type="Node2D" parent="BeliefVisualizer"]

[node name="Core" type="Sprite2D" parent="BeliefVisualizer/Belief4"]
material = SubResource("ShaderMaterial_1jdf0")
texture = SubResource("CanvasTexture_mpo78")

[node name="Outline" type="Sprite2D" parent="BeliefVisualizer/Belief4"]
z_index = -1
material = SubResource("ShaderMaterial_mww58")
texture = SubResource("CanvasTexture_mpo78")

[node name="Belief5" type="Node2D" parent="BeliefVisualizer"]

[node name="Core" type="Sprite2D" parent="BeliefVisualizer/Belief5"]
material = SubResource("ShaderMaterial_6aumn")
texture = SubResource("CanvasTexture_mpo78")

[node name="Outline" type="Sprite2D" parent="BeliefVisualizer/Belief5"]
z_index = -1
material = SubResource("ShaderMaterial_uxioa")
texture = SubResource("CanvasTexture_mpo78")

[node name="SmoothTimer" type="Timer" parent="BeliefVisualizer"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Head-front" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.501961)
z_index = 10
scale = Vector2(0.08, 0.08)
texture = ExtResource("8_y7txn")

[node name="Head-outline" type="Sprite2D" parent="."]
z_index = 10
scale = Vector2(0.08, 0.08)
texture = ExtResource("9_occuo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.75)
shape = SubResource("CapsuleShape2D_2teft")

[node name="DecisionTimer" type="Timer" parent="."]
autostart = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Eyes" type="Sprite2D" parent="."]
z_index = 15
scale = Vector2(0.08, 0.08)
texture = ExtResource("9_b2x7f")

[connection signal="timeout" from="DecisionTimer" to="." method="update_decisions"]
[connection signal="timeout" from="ShotTimer" to="." method="shoot"]
